# hyperdex

./: .gitignore  Cargo.toml  HYPERDEX_E2E_FLOW.md  HYPERDEX_TESTING_GUIDE.md  MAKER_FLOW.md  MAKER_REGISTRATION.md  README.md  env.mainnet.example  fix.md  sdkfix.md  sdkupdate.md  swapping.md
.cargo/: config.toml
backend/: .env.example  README.md  package-lock.json  package.json  tsconfig.smoke.json
backend/scripts/: smoke-test.ts
backend/src/: config.ts  index.ts
contracts/fee_distributor/: Cargo.toml
contracts/maker_pool/: Cargo.toml
contracts/maker_pool_factory/: Cargo.toml
contracts/maker_pool_factory/src/: lib.rs  test.rs
contracts/pool_registry/: Cargo.toml
contracts/quote_verifier/: Cargo.toml
contracts/quote_verifier/src/: lib.rs  tests.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Navbar.tsx  Toast.tsx
frontend/hooks/: useAuction.ts  useIsAdmin.ts  useMakerState.ts  useWallet.ts
frontend/lib/: adminAuth.ts  api.ts  constants.ts  stellar.ts  types.ts
frontend/public/: hero-bg.avif
frontend/store/: walletStore.ts
maker-sdk/: .env.example  CUSTOM_ENGINE.md  README.md  TESTING_ENGINES.md  package-lock.json  package.json  tsconfig.json
scripts/: check-maker-registration.ts  check-system.sh  deploy-v2.sh  register-maker-mongodb.ts  reset-test-makers.ts  smoke-test.ts  test-deposit.js  test-deposit.ts  testnet-accounts.json  update-riju-signer.ts  update-signer.ts  verify-serialization-match.ts
(+126 files in other folders)
