[package]
name = "maker_pool_factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
pool_registry = { path = "../pool_registry" }

[features]
testutils = ["soroban-sdk/testutils"]
