[package]
name = "quote_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
pool_registry = { path = "../pool_registry" }
maker_pool = { path = "../maker_pool", features = ["testutils"] }
fee_distributor = { path = "../fee_distributor" }
ed25519-dalek = "2"
